--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,26 +1,35 @@
 name: tts-env
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
-  - ca-certificates=2021.10.26=h06a4308_2
+  - ca-certificates=2021.10.8=ha878542_0
   - certifi=2021.5.30=py36h06a4308_0
+  - icu=68.1=h58526e2_0
+  - jansson=2.13.1=h7f98852_0
   - libedit=3.1.20210910=h7f8727e_0
   - libffi=3.2.1=hf484d3e_1007
   - libgcc-ng=9.3.0=h5101ec6_17
   - libgomp=9.3.0=h5101ec6_17
+  - libiconv=1.16=h516909a_0
   - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libxml2=2.9.12=h72842e0_0
   - ncurses=6.3=h7f8727e_2
   - openssl=1.1.1l=h7f8727e_0
+  - pcre=8.45=h9c3ff4c_0
   - pip=21.2.2=py36h06a4308_0
   - python=3.6.9=h265db76_0
+  - python_abi=3.6=2_cp36m
   - readline=7.0=h7b6447c_5
   - setuptools=58.0.4=py36h06a4308_0
   - sqlite=3.33.0=h62c20be_0
   - tk=8.6.11=h1ccaba5_0
+  - uwsgi=2.0.19.1=py36h57ba7d8_3
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h516909a_0
   - zlib=1.2.11=h7f8727e_4
   - pip:
     - appdirs==1.4.4
@@ -84,5 +93,5 @@ dependencies:
     - urllib3==1.26.8
     - werkzeug==2.0.2
     - zipp==3.6.0
-prefix: /home/devmood/.conda/envs/school-project
+prefix: /home/devmood/.conda/envs/tts-env
 
