--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,6 @@ server {
 	listen 80;
 
 	location / {
-		include uwsgi_params;
-		uwsgi_pass tts-api:8080;
+		proxy_pass http://tts-api:8000;
 	}
 }
