--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,96 +1,119 @@
 name: tts-env
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
+  - blas=2.112=mkl
+  - blas-devel=3.9.0=12_linux64_mkl
+  - brotlipy=0.7.0=py36h8f6f2f9_1001
   - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.5.30=py36h06a4308_0
-  - icu=68.1=h58526e2_0
-  - jansson=2.13.1=h7f98852_0
-  - libedit=3.1.20210910=h7f8727e_0
-  - libffi=3.2.1=hf484d3e_1007
-  - libgcc-ng=9.3.0=h5101ec6_17
-  - libgomp=9.3.0=h5101ec6_17
-  - libiconv=1.16=h516909a_0
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - libxml2=2.9.12=h72842e0_0
-  - ncurses=6.3=h7f8727e_2
-  - openssl=1.1.1l=h7f8727e_0
-  - pcre=8.45=h9c3ff4c_0
-  - pip=21.2.2=py36h06a4308_0
-  - python=3.6.9=h265db76_0
+  - charset-normalizer=2.0.10=pyhd8ed1ab_0
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - cpuonly=2.0=0
+  - cryptography=35.0.0=py36hb60f036_0
+  - dataclasses=0.8=pyh787bdff_2
+  - filelock=3.4.1=pyhd8ed1ab_0
+  - future=0.18.2=py36h5fab9bb_3
+  - huggingface_hub=0.4.0=pyhd8ed1ab_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib_metadata=4.8.1=hd8ed1ab_1
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - libblas=3.9.0=12_linux64_mkl
+  - libcblas=3.9.0=12_linux64_mkl
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=11.2.0=h1d223b6_12
+  - libgfortran-ng=11.2.0=h69a702a_12
+  - libgfortran5=11.2.0=h5c6108e_12
+  - libgomp=11.2.0=h1d223b6_12
+  - liblapack=3.9.0=12_linux64_mkl
+  - liblapacke=3.9.0=12_linux64_mkl
+  - libprotobuf=3.18.1=h780b84a_0
+  - libstdcxx-ng=11.2.0=he4da1e4_12
+  - libuv=1.43.0=h7f98852_0
+  - libzlib=1.2.11=h36c2ea0_1013
+  - llvm-openmp=12.0.1=h4bd325d_1
+  - mkl=2021.4.0=h8d4b97c_729
+  - mkl-devel=2021.4.0=ha770c72_730
+  - mkl-include=2021.4.0=h8d4b97c_729
+  - ncurses=6.3=h9c3ff4c_0
+  - ninja=1.10.2=h4bd325d_1
+  - numpy=1.19.5=py36hfc0c790_2
+  - openssl=1.1.1l=h7f98852_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pip=21.3.1=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pysocks=1.7.1=py36h5fab9bb_3
+  - python=3.6.9=h9d8adfe_0_cpython
   - python_abi=3.6=2_cp36m
-  - readline=7.0=h7b6447c_5
-  - setuptools=58.0.4=py36h06a4308_0
-  - sqlite=3.33.0=h62c20be_0
-  - tk=8.6.11=h1ccaba5_0
-  - uwsgi=2.0.19.1=py36h57ba7d8_3
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
-  - yaml=0.2.5=h516909a_0
-  - zlib=1.2.11=h7f8727e_4
+  - pytorch=1.9.1=cpu_py36ha8b20dc_3
+  - pytorch-mutex=1.0=cpu
+  - readline=8.1=h46c0cb4_0
+  - regex=2021.9.30=py36h8f6f2f9_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - sacremoses=0.0.46=pyhd8ed1ab_0
+  - setuptools=58.0.4=py36h5fab9bb_2
+  - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
+  - sqlite=3.37.0=h9cd32fc_0
+  - tbb=2021.5.0=h4bd325d_0
+  - tk=8.6.11=h27826a3_1
+  - tokenizers=0.10.3=py36h589faa6_1
+  - tqdm=4.62.3=pyhd8ed1ab_0
+  - transformers=4.16.1=pyhd8ed1ab_0
+  - typing-extensions=4.0.1=hd8ed1ab_0
+  - typing_extensions=4.0.1=pyha770c72_0
+  - urllib3=1.26.8=pyhd8ed1ab_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
+  - zlib=1.2.11=h36c2ea0_1013
   - pip:
     - appdirs==1.4.4
     - audioread==2.1.9
     - autopep8==1.6.0
     - bandit==1.7.1
+    - certifi==2021.10.8
     - cffi==1.15.0
-    - charset-normalizer==2.0.10
     - click==8.0.3
     - cycler==0.11.0
     - cython==0.29.23
-    - dataclasses==0.8
     - einops==0.3.0
-    - filelock==3.4.1
     - flask==2.0.2
     - flask-cors==3.0.10
     - gitdb==4.0.9
     - gitpython==3.1.18
-    - huggingface-hub==0.4.0
-    - idna==3.3
+    - gunicorn==20.1.0
     - importlib-metadata==4.8.3
     - inflect==5.0.2
     - itsdangerous==2.0.1
     - jinja2==3.0.3
-    - joblib==1.1.0
     - kiwisolver==1.3.1
     - librosa==0.8.0
     - llvmlite==0.36.0
     - markupsafe==2.0.1
     - matplotlib==3.3.3
     - numba==0.53.1
-    - numpy==1.19.5
-    - packaging==21.3
     - pbr==5.8.0
     - pillow==8.4.0
-    - playsound==1.3.0
-    - pooch==1.5.2
+    - pooch==1.6.0
     - pycodestyle==2.8.0
-    - pycparser==2.21
-    - pyparsing==3.0.6
     - python-dateutil==2.8.2
     - pyyaml==6.0
-    - regex==2021.11.10
-    - requests==2.27.1
     - resampy==0.2.2
-    - sacremoses==0.0.47
     - scikit-learn==0.24.2
     - scipy==1.5.4
-    - six==1.16.0
     - smmap==5.0.0
     - soundfile==0.10.3.post1
     - stevedore==3.5.0
     - threadpoolctl==3.0.0
-    - tokenizers==0.10.3
     - toml==0.10.2
-    - torch==1.9.0
-    - tqdm==4.62.3
-    - transformers==4.15.0
-    - typing-extensions==4.0.1
     - unidecode==1.1.2
-    - urllib3==1.26.8
     - werkzeug==2.0.2
     - zipp==3.6.0
 prefix: /home/devmood/.conda/envs/tts-env
