--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
   tts-api:
     build: .
     container_name: tts-api
+    expose:
+      - 8000
   tts-proxy:
     container_name: tts-proxy
     build: nginx
