--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,11 @@
 server {
 	listen 80;
 
-	location / {
+	# location / {
+	# 	proxy_pass http://tts-ui:3000;
+	# }
+
+	location /api {
 		proxy_pass http://tts-api:8000;
 	}
 }
