forward 3000 to 80 which in turn is handled by nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,15 @@
 server {
 	listen 80;
 
-	# location / {
-	# 	proxy_pass http://tts-ui:3000;
-	# }
+	location / {
+		proxy_pass http://tts-ui:3000;
+	}
+}
 
-	location /api {
+server {
+	listen 81;
+
+	location / {
 		proxy_pass http://tts-api:8000;
 	}
 }
